# dbs-toolbox

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  generate_clinical_report.py  generate_surgical_report.py  transform_electrode_json.py  transform_surgical_csv.py
examples/data/: electrode_reconstruction_sample.json  surgical_data_sample.csv
src/dbstoolbox/: __init__.py  main.py
src/dbstoolbox/components/: __init__.py  file_upload.py  plotly_3d.py  report_generation_dialog.py
src/dbstoolbox/pages/: __init__.py  home.py  transform_simple.py  utils.py
src/dbstoolbox/reports/: README.md  __init__.py  brain_shift_report.py  stereotactic_report.py  stimulation_report.py
src/dbstoolbox/utils/: __init__.py  nifti_slice_utils.py  notifications.py  temp_file_manager.py  transform_coordinates.py  validate_ants_transform.py  validate_electrode_json.py  validate_frame_fiducials.py  validate_frame_registration.py  validate_nifti.py  validate_surgical_csv.py
src/dbstoolbox/visualization/: __init__.py  plot_3d_generator.py
